@@ -1,12 +1,11 @@
 #!/bin/bash
-
-# Licensed to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  See the NOTICE file
-# distributed with this work for additional information
-# regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
-# "License"); you may not use this file except in compliance
-# with the License.  You may obtain a copy of the License at
+#
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to You under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
 #
 #     http://www.apache.org/licenses/LICENSE-2.0
 #
@@ -15,54 +14,35 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+#
 
-if [[ -n "$JAVA_HOME" ]] && [[ -x "$JAVA_HOME/bin/java" ]];  then
-    JAVA="$JAVA_HOME/bin/java"
-elif type -p java; then
-    JAVA=java
-else
-    echo "Error: JAVA_HOME environment variable is not set." 1>&2
+SERVER_NAME=ShenYu-Bootstrap
+
+cd `dirname $0`
+cd ..
+DEPLOY_DIR=`pwd`
+
+LOGS_DIR=${DEPLOY_DIR}/logs
+if [ ! -d ${LOGS_DIR} ]; then
+    mkdir ${LOGS_DIR}
+fi
+
+LOG_FILES=${LOGS_DIR}
+EXT_LIB=${DEPLOY_DIR}/ext-lib
+
+PIDS=`ps -ef | grep java | grep "$DEPLOY_DIR" | grep -v grep | awk '{print $2}'`
+if [ -n "$PIDS" ]; then
+    echo "ERROR: The $SERVER_NAME already started!"
+    echo "PID: $PIDS"
     exit 1
 fi
 
-PRG_DIR=$(cd `dirname $0`; pwd)
+CLASS_PATH=.:${DEPLOY_DIR}/conf:${DEPLOY_DIR}/lib/*:${EXT_LIB}/*
+JAVA_OPTS=" -server -Xmx2g -Xms2g -Xmn1g -Xss256k -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 "
 
-BASE_DIR=$(cd $PRG_DIR/.. ; pwd)
+MAIN_CLASS=org.apache.shenyu.bootstrap.ShenyuBootstrapApplication
+echo "Starting the $SERVER_NAME ..."
 
-APP="$BASE_DIR/lib/shenyu-bootstrap.jar"
-
-[[ -z "$LOG_DIR" ]] && LOG_DIR="$BASE_DIR/logs"
-[[ -d "$LOG_DIR" ]] || mkdir -p "$LOG_DIR"
-
-PID_FILE="$LOG_DIR/shenyu-bootstrap.pid"
-
-JAVA_MEM_OPTS="-Xmx2048m -Xms2048m -Xmn1024m -Xss512k"
-
-JAVA_GC_TUNE_OPTS="
-  -XX:+UseParNewGC \
-  -XX:+UseConcMarkSweepGC \
-  -XX:+CMSParallelRemarkEnabled \
-  -XX:+UseCMSInitiatingOccupancyOnly \
-  -XX:MaxGCPauseMillis=850 \
-  -XX:ParallelGCThreads=20 \
-  -XX:CMSInitiatingOccupancyFraction=75 \
-  -XX:+AggressiveOpts \
-  -XX:+UseBiasedLocking \
-  -XX:+DisableExplicitGC \
-  -XX:+UseFastAccessorMethods \
-  -XX:+HeapDumpOnOutOfMemoryError \
-  "
-#  -XX:+PrintGCDetail
-#  -XX:+UseCMSCompactAtFullCollection
-
-JAVA_GC_LOG_OPTS="-Xloggc:$LOG_DIR/gc.log"
-
-JAVA_OPTS="$JAVA_OPTS $JAVA_MEM_OPTS $JAVA_GC_TUNE_OPTS $JAVA_GC_LOG_OPTS"
-
-$JAVA $JAVA_OPTS -jar $APP --spring.config.location=file:"$BASE_DIR"/conf/  >> "${LOG_DIR}"/shenyu-bootstrap.out 2>&1 &
-
-if [ $? -gt 0 ]; then
-    echo "Starting $APP ERROR"
-fi
-    echo "Starting $APP OK"
-echo $! > "$PID_FILE"
+nohup java ${JAVA_OPTS} -classpath ${CLASS_PATH} ${MAIN_CLASS} >/dev/null 2>&1 &
+sleep 1
+echo "Please check the log files: $LOG_FILES"
